# Sieve

./: .gitignore  README.md  main.py  pyproject.toml  test_connectivity.py  verify_auth_changes.py  verify_services.py
app/: __init__.py  config.py  database.py  llm_client.py  main.py  models.py  parser.py  worker.py
frontend/: .env.example  index.html  vite.config.js
frontend/mockup/: README.md  types.ts
frontend/mockup/app/dashboard/: page.tsx
frontend/mockup/components/: PrDetailPanel.tsx  PrTable.tsx  PrTabs.tsx  StatsCards.tsx
frontend/mockup/lib/: api.ts
frontend/src/: App.css  App.jsx  index.css
migrations/: 0001_add_pr_scan_quality_fields.sql  0002_add_dashboard_entities.sql  0003_add_repository_webhook_fields.sql
tests/: test_parser.py  test_worker_helpers.py
